add_library(${HK_INTEGERS} INTERFACE)

add_library(
  ${HK_NAMESPACE}::${HK_INTEGERS} ALIAS ${HK_INTEGERS})

target_include_directories(
  ${HK_INTEGERS}
  INTERFACE
  $<BUILD_INTERFACE:${${HK_INTEGERS}_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

include(GNUInstallDirs)
install(
  TARGETS ${HK_INTEGERS}
  EXPORT ${HK_INTEGERS}_Targets
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

include(CMakePackageConfigHelpers)
configure_package_config_file(
  "${PROJECT_SOURCE_DIR}/${HK_INTEGERS}Config.cmake.in"
  "${PROJECT_BINARY_DIR}/${HK_INTEGERS}Config.cmake"
  INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${HK_LIB}/cmake)

install(
  EXPORT ${HK_INTEGERS}_Targets
  FILE ${HK_INTEGERS}Targets.cmake
  NAMESPACE ${HK_NAMESPACE}::
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${HK_LIB}/cmake)

install(
  FILES
  "${PROJECT_BINARY_DIR}/${HK_INTEGERS}Config.cmake"
  DESTINATION
  "${CMAKE_INSTALL_DATAROOTDIR}/${HK_LIB}/cmake")

install(
  FILES ${HK_HEADERS}
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${HK_INCLUDE})
